# embedded_software_pico_playground

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  git_submodule_status.py
.github/workflows/: ci.yaml
App-Timers/: CMakeLists.txt  main.cpp
Common/: utils.cpp  utils.h
lib/adafruit_gps/: CMakeLists.txt
lib/adafruit_gps/examples/GPS_I2C_Parsing/: GPS_I2C_Parsing.cpp
lib/adafruit_gps/host_nmea_capture/: parse_and_plot_nmea.py
lib/adafruit_gps/src/: Adafruit_GPS.hpp  Adafruit_PMTK.hpp  NMEA_parse.cpp  utils.hpp
lib/adafruit_gps/tools/: nmea_to_maps.py
lib/pca9685_motor_control/: CMakeLists.txt
pca9685_motor_control/: CMakeLists.txt  pca9685.cpp  pca9685.hpp  pca9685_test.cpp
src/adafruit_gps/src/: Adafruit_GPS.cpp  Adafruit_PMTK.h  NMEA_build.cpp  NMEA_data.cpp  NMEA_data.h
src/common/: utils.cpp  utils.h
src/freertos_timer_app/: CMakeLists.txt  main.cpp
src/microros_app/: CMakeLists.txt  pico_micro_ros_example.c
src/pca9685_motor_control/: pca9685_test.cpp
tests/: CMakeLists.txt  nmea_parse_tests.cpp  test.cpp  test_main.cpp  utils_tests.cpp
tests/mocks/: mock_hardware.hpp  mock_i2c.cpp  mock_i2c.hpp
